RESOLVED FIXED68637
Widget::frameRect shouldn't be virtual
https://bugs.webkit.org/show_bug.cgi?id=68637
Summary Widget::frameRect shouldn't be virtual
Anders Carlsson
Reported 2011-09-22 10:44:23 PDT
Widget::frameRect shouldn't be virtual
Attachments
Patch (1.20 KB, patch)
2011-09-22 10:48 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-09-22 10:48:28 PDT
Anders Carlsson
Comment 2 2011-09-22 10:50:17 PDT
Note You need to log in before you can comment on or make changes to this bug.