Widget::frameRect shouldn't be virtual https://bugs.webkit.org/show_bug.cgi?id=68637

Reviewed by Sam Weinig.

Nobody overrides Widget::frameRect and nobody should.

* platform/Widget.h:


Canonical link: https://commits.webkit.org/84580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95736 268f45cc-cd09-0410-ab3c-d52691b4dbfc